# Data_Sweeper_App

./: README.md  pyproject.toml  requirements.txt
src/data_sweeper_app/: app.py
