[project]
name = "data-sweeper-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Muzaffar Ahmed",email = "142881759+muzaffar401@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "data_sweeper_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
